--- a/app/src/main/res/layout/fragment_new_recipe.xml
+++ b/app/src/main/res/layout/fragment_new_recipe.xml
@@ -65,6 +65,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
